--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <div class="area-title text-center wow fadeIn">
                         <h2><span style="text-transform: uppercase;">Features</span></h2>
                         <p>CHARGO, The Ultimate Wireless Charging Device<br>
-                            Compatible with all USB-C & Lighting(APPLE) Devices</p>
+                            Compatible With All USB-C & LIGHTING (APPLE) Devices</p>
                     </div>
                 </div>
             </div>
@@ -268,21 +268,21 @@
                     <div class="single-features wow fadeIn">
                         <div class="features-icon"><i class="icofont icofont-ui-network"></i></div>
                         <h3>Wireless</h3>
-                        <p>You no longer have to be restricted by cords and charging stations, simply change anywhere</p>
+                        <p>You no longer have to be restricted by cords and charging stations, simply charge anywhere</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
                     <div class="single-features wow fadeIn">
                         <div class="features-icon"><i class="icofont icofont-social-silverstripe"></i></div>
                         <h3>Flexibility</h3>
-                        <p>No longer do you have to worry about tagled cords. Chargo aims to remove clutter promote organization and mobility</p>
+                        <p>No longer do you have to worry about tangled cords. Chargo aims to remove clutter, promote organization and mobility</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
                     <div class="single-features wow fadeIn">
                         <div class="features-icon"><i class="icofont icofont-quill-pen"></i></div>
                         <h3>Light Weight</h3>
-                        <p>Weighting at 40g we made sure that Chargo lives up to it's "portable & Light Weight" Reputation.</p>
+                        <p>Weighting at 40g we made sure that Chargo lives up to it's "Portable & Light Weight" Reputation</p>
                     </div>
                 </div>
             </div>
