--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="THEMECTG" />
 
     <!--====== TITLE TAG ======-->
-    <title>PowerBank</title>
+    <title>Chargo Wireless Charger</title>
 
     <!--====== FAVICON ICON =======-->
     <link rel="shortcut icon" type="image/ico" href="img/favicon.png" />
